[gd_scene load_steps=7 format=3 uid="uid://dv1r7c6f4271q"]

[ext_resource type="Script" path="res://Scripts/gate.gd" id="1_3hga6"]
[ext_resource type="Texture2D" uid="uid://n2adjly5atqx" path="res://Assets/Tilesets/Tileset1k.png" id="2_ethwi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jc3uy"]
size = Vector2(12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_8y2fh"]
atlas = ExtResource("2_ethwi")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5111q"]
atlas = ExtResource("2_ethwi")
region = Rect2(0, 16, 16, 16)

[sub_resource type="LabelSettings" id="LabelSettings_u1ptu"]
line_spacing = 0.0
font_size = 9
font_color = Color(0, 0, 0, 1)

[node name="Gate" type="Area2D" groups=["gate"]]
z_index = 1
script = ExtResource("1_3hga6")
is_entrance = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_jc3uy")

[node name="gate_open" type="Sprite2D" parent="."]
z_index = 1
texture = SubResource("AtlasTexture_8y2fh")

[node name="gate_closed" type="Sprite2D" parent="."]
visible = false
z_index = 1
texture = SubResource("AtlasTexture_5111q")

[node name="gate_label" type="Label" parent="."]
offset_left = -11.0
offset_top = -19.0
offset_right = 12.0
offset_bottom = -6.0
text = "OUT"
label_settings = SubResource("LabelSettings_u1ptu")
horizontal_alignment = 1
